# moder-cpp-examples

./: CMakeLists.txt  README.md  c++-mastering-udemy-notes.md  constexpr.cpp  if-switch-var.cpp  initializer_list.cpp  nullptr.cpp  tuple.cpp
c++/: CMakeLists.txt  explicit.cpp  most_vexing_parse.cpp
c++11/: CMakeLists.txt  auto_decltype.cpp  delegate_ctor.cpp  enum_class.cpp  explicit_delete_default_function.cpp  inherit_ctor.cpp  lambda.cpp  override_final.cpp  rangebased_for_loop.cpp  std_bind_placeholder.cpp  std_function.cpp  trail_type_inference.cpp  type_alias_template.cpp  variadic_template.cpp
c++14/: CMakeLists.txt  decltype_auto.cpp  generic_lambda.cpp  lambda_expr_capture.cpp
c++17/: CMakeLists.txt  fold_expression.cpp  if_constexpr.cpp  structured_binding.cpp  trail_type_inference17.cpp  variable_param_template_exp.cpp
