set(CMAKE_CXX_STANDARD 17)

add_executable(if-switch-var if-switch-var.cpp)
add_executable(structured_binding structured_binding.cpp)
add_executable(trail_type_inference17 trail_type_inference17.cpp)
add_executable(if_constexpr if_constexpr.cpp)
add_executable(variable_param_template_exp variable_param_template_exp.cpp)
add_executable(fold_expression fold_expression.cpp)
